--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,17 @@
   font-size: large;
 }
 
+.error-message {
+  background-color: #ff7272;
+  color: white;
+  padding: 1em;
+}
+
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
